--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "cors": "^2.8.5",
     "mongoose": "^7.2.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
