--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "mongoose": "^7.2.0",
     "next": "13.4.3",
@@ -20,6 +21,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13"
   }
 }
